@@ -36,6 +36,14 @@ sub new {
 	# Material samples might contain transparent materials that need blending
 	$self->{blending} = 1;
 
+	# Scaling and rotation are not supported
+	if ( $self->{scale} ) {
+		die "MaterialSampler actors do not support scaling";
+	}
+	if ( $self->{orient} ) {
+		die "MaterialSampler actors do not support rotation";
+	}
+
 	return $self;
 }
 
